--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "autoprefixer": "^9.8.6",
+    "classnames": "^2.3.1",
     "postcss": "^7.0.36",
     "postcss-cli": "^8.1.0",
     "react": "^17.0.2",
