--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,7 @@ GOOGLE_CLIENT_SECRET=4xr_MFxCIHrwueYCJVqDUVCI
 AWS_S3_ACCESS_KEY= AKIASZUQ2YOBDBHJ3PMM
 
 AWS_S3_SECRET_KEY=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
+
+MAILGUN__API__KEY=f21a188d1ff089d785bea5d42fc42624-fb87af35-19262034
+
+MAILGUN__DOMAIN=sandboxfd16544050ec4b93a78d8f38ef01c5e3.mailgun.org
