--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "autoprefixer": "^9.8.6",
+    "axios": "^0.21.4",
     "classnames": "^2.3.1",
     "leaflet": "^1.7.1",
     "postcss": "^7.0.36",
@@ -19,10 +20,14 @@
     "react-images-viewer": "^1.6.7",
     "react-leaflet": "^3.2.1",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-simple-image-viewer": "^1.1.0",
     "react-slick": "^0.28.1",
+    "redux": "^4.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
     "web-vitals": "^1.1.2"
