--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.4",
+    "body-parser": "^1.19.0",
     "classnames": "^2.3.1",
     "leaflet": "^1.7.1",
     "postcss": "^7.0.36",
